<resources>
    <string name="app_name">Prog3</string>
    <string name="valuta_omrekenen">valuta omrekenen</string>
    <string name="voeg_een_gebruiker_toe">voeg een gebruiker toe</string>
    <string name="werknemer_toevoegen">werknemer toevoegen</string>
    <string name="personen_inzien">personen inzien</string>
    <string name="medewerker_toevoegen">medewerker toevoegen</string>
    <string name="gebruikers_naam">gebruikers naam:</string>
    <string name="gebruikers_email">gebruikers email:</string>
    <string name="toevoegen">toevoegen</string>
    <string name="john">john</string>
    <string name="johndoe_gmail_com">johndoe@gmail.com</string>
    <string name="werknemers_naam">werknemers naam:</string>
    <string name="werknemers_email">werknemers email:</string>
    <string name="_1234567890">1234567890</string>
    <string name="werknemers_tel">werknemers tel:</string>
    <string name="naam">naam</string>
    <string name="type_gebruiker">type gebruiker</string>
    <string name="email">email</string>
    <string name="tel">tel</string>
    <string name="bedrag">Bedrag</string>
    <string name="_1_14">1.14</string>
    <string name="omrekenen">omrekenen</string>
    <string name="bedrag_in_euro_s_dollars">bedrag in Euro\'s / Dollars</string>
    <string name="uitvoer">uitvoer</string>
    <string name="dollars">Dollars</string>
    <string name="euro_s">Euro\'s</string>
</resources>
