<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonListAdapter">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:id="@+id/txt_listName"
            android:layout_width="439dp"
            android:layout_height="72dp"
            android:layout_weight="66.66"
            android:text="@string/naam"
            android:textAlignment="center"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="33.33"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_listTypeUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_gebruiker"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_listEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_listTel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tel"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>